# portfolio_generator

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy_doc.yml  test.yml
examples/case1/: README.md
examples/case1/.pfg/: portfolio.j2  portfolio.yml  portfolio2.yml  portfolio3.yml
examples/case2/.pfg/: portfolio.yml
src/portfolio_generator/: __init__.py  build.py  cli.py  hub.py  j2filter.py  pfg.py  templates.py  validate.py
templates/: portfolio.j2
tests/: conftest.py  test_build.py  test_cli.py  test_hub.py  test_pfg.py  test_portfolio_generator.py  test_validate.py
